<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.notes.patientexaminationprotocol.fragments.menu.MenuFragment">

    <data>
        <variable
            name="menuVM"
            type="com.example.notes.patientexaminationprotocol.fragments.menu.MenuViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/txtMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            android:text="@string/txtMenu"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="22dp"
            />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/txtMenu"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/ll_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <include
                android:id="@+id/btn_patients"
                layout="@layout/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="@{menuVM::onClickPatients}"
                />

            <include
                android:id="@+id/btn_protocols"
                layout="@layout/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="@{menuVM::onClickProtocols}"/>

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/ll_menu"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/txtMenu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            android:text="@string/SpravInfo"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"
            />

        <LinearLayout
            android:id="@+id/ll_menu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtMenu2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <include
                android:id="@+id/btn_diagnoses"
                layout="@layout/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="@{menuVM::onClickDiagnoses}"
                />

            <include
                android:id="@+id/btn_symptoms"
                layout="@layout/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="@{menuVM::onClickSymptoms}"/>

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/ll_menu2"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/txtMenu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            android:text="@string/otherInfo"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20dp"
            />

        <LinearLayout
            android:id="@+id/ll_menu3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtMenu3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <include
                android:id="@+id/btn_personalInfo"
                layout="@layout/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="@{menuVM::onClickPersonalInfo}"
                />

            <include
                android:id="@+id/btn_hospitalInfo"
                layout="@layout/menu_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:onClick="@{menuVM::onClickHospitalInfo}"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>




</layout>